[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/mod.rs"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies]
glam = { version = "0.14", features = ["scalar-math","serde"] }
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.4"
tokio-stream = "0.1"
futures-util = "0.3"
serde_json = "1.0"
warp = "0.3"
futures = "*"
log = "0.4"
rand = "0.8.5"
